src/objects/CH_FIRQuestion__c.object
<CustomObject>
    <description>NOKIASC-35917</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NOKIASC-35917</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalDetails__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>NOKIASC-35917</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What</fullName>
                </value>
                <value>
                    <fullName>Why</fullName>
                </value>
                <value>
                    <fullName>Where</fullName>
                </value>
                <value>
                    <fullName>Analysis After the Issue</fullName>
                </value>
                <value>
                    <fullName>Activity After the Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <label>Mandatory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Picklist and Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Picklist Values</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>NOKIASC-35917</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>NOKIASC-35917</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>CH FIR Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SequenceNumber__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Question__c</columns>
        <columns>AdditionalDetails__c</columns>
        <columns>PicklistValues__c</columns>
        <columns>Mandatory__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All FIR Questions</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH FIR Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MandatoryField</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Mandatory__c, &apos;Picklist&apos;) || ISPICKVAL(Mandatory__c, &apos;Picklist and Answer&apos;)) &amp;&amp; ISBLANK(PicklistValues__c)</errorConditionFormula>
        <errorMessage>Picklist cannot be mandatory if no values are available</errorMessage>
    </validationRules>
</CustomObject>