src/objects/CH_FIRQuestion__c/validationRules/MandatoryField.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryField</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Mandatory__c, &apos;Picklist&apos;) || ISPICKVAL(Mandatory__c, &apos;Picklist and Answer&apos;)) &amp;&amp; ISBLANK(PicklistValues__c)</errorConditionFormula>
    <errorMessage>Picklist cannot be mandatory if no values are available</errorMessage>
</ValidationRule>